Updates fedora-cargo-plugin to 0.1